--- a/src/styles/pages/contact.css
+++ b/src/styles/pages/contact.css
@@ -2,19 +2,28 @@
 
 .contact {
   color: var(--accent-light);
-  max-width: 80%;
-  /* margin: 0 auto; */
+  max-width: 75ch;
+  margin: 0 auto;
 }
 
 #contact-form {
-  padding-block-start: 56px;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.contact p {
+  padding-block: 20px;
+}
+
+#contact-form {
+  padding-block-start: 24px;
 }
 
 input,
 textarea {
   width: 100%;
-  padding: 12px;
-  margin: 12px;
+  padding-block-end: 12px;
+  margin: 16px 8px;
   background: transparent;
   border: none;
   border-bottom: 1px solid hsl(248, 89%, 65%);
@@ -30,5 +39,5 @@ textarea:focus {
 .contact-inputs {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  gap: 24px;
 }
